[KARAF-203] Apache Karaf 2.1.0 release. \n Update Release Notes
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@999156 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -19,6 +19,16 @@
                     Apache Karaf 2.1.0
                     ==================
 
+  Overview
+  --------
+
+ New to this release of Apache Karaf is a JAAS Database Login Module, and a mechanism 
+ that allows a karaf application to distingush between UserPrincipal & RolePrincipal
+ without depending from the Karaf JAAS Module. Various new and improved commands have been
+ implemented, and are now available for general use. We have also resolved a number of
+ outstanding issues, and improved support on OS X and IBM Java based systems. For more
+ detail please see the change log below.
+
   Changelog
   ---------
 
