Update release notes
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@1036255 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -30,6 +30,7 @@
     * [KARAF-270] - karaf-service scripts tries to create "data" directory in wrong location 
     * [KARAF-273] - java.lang.NullPointerException: Inflater has been closed
     * [KARAF-277] - The bin/client script does not work anymore
+    * [KARAF-262] - The command admin create new instance cannot create good script in bash language on cygwin
 
 ** Task
     * [KARAF-276] - upgrade to pax-url 1.2.1
