[KARAF-280] Update release notes for 2.1.2 release candidate
git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@1037693 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -34,6 +34,7 @@
     * [KARAF-284] - Remove snapshot dependency on org.apache.karaf.shell.console in archetypes/command/src/main/resources/archetype-resources/pom.xml
     * [KARAF-285] - The bin/shell script should not read the input stream when a command is passed
     * [KARAF-286] - When running in the plain shell console (using bin/shell), tab completion prints lots of exceptions
+    * [KARAF-292] - Maven filtering issue for Windows batch file in kit.
 
 ** Task
     * [KARAF-276] - upgrade to pax-url 1.2.1
