[KARAF-549] Apache Karaf 2.1.5 Release
Updating in kit Release Notes to include itests fix.


git-svn-id: https://svn.apache.org/repos/asf/karaf/branches/karaf-2.1.x@1097089 13f79535-47bb-0310-9956-ffa450edef68

--- a/RELEASE-NOTES
+++ b/RELEASE-NOTES
@@ -35,6 +35,7 @@
     * [KARAF-508|https://issues.apache.org/jira/browse/KARAF-508] - The config:edit create does not allow the creation of factory configs
     * [KARAF-509|https://issues.apache.org/jira/browse/KARAF-509] - The config:update command does not save factory configurations to the correct file
     * [KARAF-515|https://issues.apache.org/jira/browse/KARAF-515] - Completion error
+    * [KARAF-587|https://issues.apache.org/jira/browse/KARAF-587] - Archetypes iTests don't take the correct command archetypes
 
 ** Improvement
     * [KARAF-484|https://issues.apache.org/jira/browse/KARAF-484] - Upgrade to Felix Framework 3.0.9
